--- a/index.html
+++ b/index.html
@@ -8,33 +8,56 @@
   </head>
   <body>
     <div class="content">
-        <div class="image-section">
-            <div class="logo">
-                <img src="images/odin-lined.png" alt="">
-                ODIN
+      <div class="image-section">
+        <div class="logo">
+          <img src="images/odin-lined.png" alt="" />
+          ODIN
+        </div>
+      </div>
+      <div class="text-section">
+        <div class="dummy-text">
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. Sign up
+            <em>now</em> to get started.
+          </p>
+          <p>You <em>know</em> you want to.</p>
+        </div>
+
+        <form>
+          <p>Let's do this!</p>
+          <div class="inputs">
+            <div class="labels">
+              <label for="first-name">First Name</label>
+              <input type="text" name="first-name" id="first-name" required/>
             </div>
+            <div class="labels">
+              <label for="last-name">Last Name</label>
+              <input type="text" name="last-name" id="last-name" required/>
+            </div>
+            <div class="labels">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" required/>
+            </div>
+            <div class="labels">
+              <label for="number">Phone Number</label>
+              <input type="tel" name="number" id="number" required/>
+            </div>
+            <div class="labels">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" required/>
+            </div>
+            <div class="labels">
+              <label for="confirm-password">Confirm Password</label>
+              <input type="password" name="confirm-password" id="confirm-password" required/>
+            </div>
+          </div>
+        </form>
+        <div class="bottom-section">
+          <button>Create Account</button>
+          <p>Already have an account? <a href="">Log in</a></p>
         </div>
-        <div class="text-section">
-            <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
-            <p>You know you want to.</p>
-            <form>
-                <p>Let's do this!</p>
-                <label for="first-name">First Name</label>
-                <input type="text" name="first-name" id="first-name">
-                <label for="last-name">Last Name</label>
-                <input type="text" name="last-name" id="last-name">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-                <label for="number">Phone Number</label>
-                <input type="tel" name="number" id="number">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" name="confirm-password" id="confirm-password">
-            </form>
-            <button>Create Account</button>
-            <p>Already have an account? <a href="">Log in</a></p>
-        </div>
+      </div>
     </div>
   </body>
 </html>
