--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <div class="inputs">
             <div class="labels">
               <label for="first-name">First Name</label>
-              <input type="text" name="first-name" id="first-name" required/>
+              <input type="text" name="first-name" id="first-name" required pattern="[a-z A-Z]"/>
             </div>
             <div class="labels">
               <label for="last-name">Last Name</label>
-              <input type="text" name="last-name" id="last-name" required/>
+              <input type="text" name="last-name" id="last-name" required pattern="[a-z A-Z]"/>
             </div>
             <div class="labels">
               <label for="email">Email</label>
@@ -41,7 +41,7 @@
             </div>
             <div class="labels">
               <label for="number">Phone Number</label>
-              <input type="tel" name="number" id="number" required/>
+              <input type="tel" name="number" id="number" required pattern="[0-9]{10}"/>
             </div>
             <div class="labels">
               <label for="password">Password</label>
